--- a/WOT.TAK.Client/appsettings.json
+++ b/WOT.TAK.Client/appsettings.json
@@ -1,14 +1,14 @@
 {
-  "ServerUrl": "192.168.225.20",
-  "ServerPort": "8087",
-  "CotDirPath": "",
-  "CotResponsesDirPath": "",
+  "ServerUrl": "tak-dev.1gs20.net",
+  "ServerPort": "8089",
+  "CotDirPath": "cot/messages",
+  "CotResponsesDirPath": "cot/responses",
   "CertificateVerification": false,
-  "TrustStorePath": "",
-  "TrustStorePassword": "",
-  "KeyStorePath": "",
-  "KeyStorePassword": "",
-  "ConnectionMode": "TCP",
+  "TrustStorePath": "cert-dev/truststore-int-ca.p12",
+  "TrustStorePassword": "atakatak",
+  "KeyStorePath": "cert-dev/charlie.p12",
+  "KeyStorePassword": "atakatak",
+  "ConnectionMode": "TLS",
   "Login": "user1",
   "Password": "test123!@#"
 }
