--- a/WOT.TAK.Connection/WOT.TAK.Connection.csproj
+++ b/WOT.TAK.Connection/WOT.TAK.Connection.csproj
@@ -7,6 +7,9 @@
 		<OutputType>Library</OutputType>
 	</PropertyGroup>
 
+	<Target Name="Test">
+	</Target>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
