--- a/WOT.TAK.Connection.Tests/WOT.TAK.Connection.Tests.csproj
+++ b/WOT.TAK.Connection.Tests/WOT.TAK.Connection.Tests.csproj
@@ -8,10 +8,16 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
+  <Target Name="Test">
+    <NUnit3 Assemblies="$(OutputPath)/$(TargetFileName)" ToolPath="$(NuGetPackageRoot)nunit.consolerunner\3.16.2\tools" />
+  </Target>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.2" />
+    <PackageReference Include="MSBuildTasks" Version="1.5.0.235" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
