--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,18 @@
+image: mcr.microsoft.com/dotnet/sdk:6.0
+
 stages:
   - build
   - test
 
-build-code-job:
+build:
   stage: build
   script:
-    - msbuild
+    - dotnet pack
+  artifacts:
+    paths:
+      - "**/*.nupkg"
 
-test-code-job:
+test:
   stage: test
   script:
-    - msbuild /t:test
+    - dotnet test
