--- a/WOT.TAK.Connection.Tests/WOT.TAK.Connection.Tests.csproj
+++ b/WOT.TAK.Connection.Tests/WOT.TAK.Connection.Tests.csproj
@@ -26,4 +26,13 @@
     <ProjectReference Include="..\WOT.TAK.Connection\WOT.TAK.Connection.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="cert-test\truststore.p12">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="cert-test\charlie.p12">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
