--- a/WOT.TAK.Connection.TestApp/WOT.TAK.Connection.TestApp.csproj
+++ b/WOT.TAK.Connection.TestApp/WOT.TAK.Connection.TestApp.csproj
@@ -5,6 +5,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <EnableNETAnalyzers>true</EnableNETAnalyzers>
+        <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+        <UserSecretsId>61829259-baf3-46d5-b8be-6f5362116460</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,6 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
       <PackageReference Include="ObjectDumper.NET" Version="4.2.7" />
     </ItemGroup>
 
@@ -20,25 +25,6 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Include="..\Certificates\TakDev\charlie.p12">
-        <Link>Certificates\TakDev\charlie.p12</Link>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="..\Certificates\TakDev\truststore-int-ca.p12">
-        <Link>Certificates\TakDev\truststore-int-ca.p12</Link>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="..\Certificates\TakTest\truststore-DWOT-TAK-CA-INT.p12">
-        <Link>Certificates\TakTest\truststore-DWOT-TAK-CA-INT.p12</Link>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="..\Certificates\TakTest\zintegrowane24.p12">
-        <Link>Certificates\TakTest\zintegrowane24.p12</Link>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
     </ItemGroup>
 
 </Project>
