--- a/WOT.TAK.Connection.TestApp/appsettings.json
+++ b/WOT.TAK.Connection.TestApp/appsettings.json
@@ -1,38 +1,22 @@
 ﻿{
-  "TCPConnector": {
-    "ServerUrl": {
-      "Value": "localhost"
+  "TestServers": {
+    "0": {
+      "SupportedProtocols": [ "Ssl" ],
+      "ConnectorSettings": {
+        "ServerUrl": "FILL_ME, or better use .NET User Secrets",
+        "ServerPort": "FILL_ME, or better use .NET User Secrets",
+        "CertificateAuthorityPath": "FILL_ME, or better use .NET User Secrets",
+        "CertificateAuthorityPassword": "FILL_ME, or better use .NET User Secrets",
+        "ClientCertificatePath": "FILL_ME, or better use .NET User Secrets",
+        "ClientCertificatePassword": "FILL_ME, or better use .NET User Secrets"
+      }
     },
-    "ServerPort": {
-      "Value": 8089
+    "1": {
+      "SupportedProtocols": [ "Tcp" ],
+      "ConnectorSettings": {
+        "ServerUrl": "FILL_ME, or better use .NET User Secrets",
+        "ServerPort": "FILL_ME, or better use .NET User Secrets"
+      }
     }
-  },
-
-  "SSLConnectorTakDev": {
-    "ServerUrl": {
-      "Value": "SERVER-URL"
-    },
-    "ServerPort": {
-      "Value": 8089
-    },
-    "CertificateVerification": true,
-    "TrustStorePath": "Certificates/TakDev/truststore-int-ca.p12",
-    "TrustStorePassword": "PASSWORD",
-    "KeyStorePath": "Certificates/TakDev/charlie.p12",
-    "KeyStorePassword": "PASSWORD"
-  },
-
-  "SSLConnectorTakTest": {
-    "ServerUrl": {
-      "Value": "SERVER-URL"
-    },
-    "ServerPort": {
-      "Value": 8089
-    },
-    "CertificateVerification": true,
-    "TrustStorePath": "Certificates/TakTest/truststore-DWOT-TAK-CA-INT.p12",
-    "TrustStorePassword": "PASSWORD",
-    "KeyStorePath": "Certificates/TakTest/zintegrowane24.p12",
-    "KeyStorePassword": "PASSWORD"
   }
 }
